--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>My Website</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/toggle-style.css">
+	<link rel="stylesheet" href="/dark-theme-toggle/toggle-style.css">
 </head>
 <body>
 		<label class="toggle">
@@ -14,6 +14,6 @@
 		<h1>Toggle Switch</h1>
 		<p>Hellooo, hope you're having a nice day! I made this for my website</p>
 	</div>
-	<script src="toggle.js"></script>
+	<script src="/dark-theme-toggle/toggle.js"></script>
 </body>
 </html>
